--- a/marvel_character/site/site_templates/profile.html
+++ b/marvel_character/site/site_templates/profile.html
@@ -18,13 +18,13 @@
 
 
 <header class="hero-section">
-    <h3 class="header-text">Welcome to Coding Drones, {{ current_user.email }}</h3>
+    <h3 class="header-text">Welcome to Marvel API, {{ current_user.email }}</h3>
 
     <main class="container drone_form">
         <div class="row">
             <aside class="col-12 col-md-6">
-                <h2>Create a Car</h2>
-                {% include 'car_form.html' %}
+                <h2>Create a Character</h2>
+                {% include 'character_form.html' %}
             </aside>
         </div>
     </main>
@@ -35,14 +35,14 @@
     <li class="list-group-item">Email: {{ current_user.email }}</li>
     <li class="list-group-item">Token: {{ current_user.token }}</li>
     <div class="row">
-        {% for car in cars %}
+        {% for character in characters %}
         <div class="col-3">
             <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="https://tenor.com/bUmvi.gif" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">{{ car.name }}</h5>
-                <p class="card-text">{{ car.description }}</p>
-                <p>${{ car.price }}</p>
+                <h5 class="card-title">{{ character.name }}</h5>
+                <p class="card-text">{{ character.description }}</p>
+                <p>${{ character.price }}</p>
             </div>     
             </div>    
         </div>
